Stop font from being too big

--- a/app/styles/specific-activity.css
+++ b/app/styles/specific-activity.css
@@ -31,7 +31,7 @@
     display: inline-block;
 }
 .specific-activity .detail-item {
-    font-size: 200%;
+    font-size: 180%;
 }
 .specific-activity .detail-header {
     display: inline;
